--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,29 @@
-.App {
-  margin-top: 15px;
-}
 #item {
-    margin-top: 10px !important;
+    margin-bottom: 10px !important;
 }
 .ui.horizontal.list {
+    border-radius: 3px;
+    padding-top: 5px;
+    background-color: #f4f4ee;
     margin-bottom: 30px;
+    margin-top: 15px;
+    width: 100%;
+    height: 50px;
+}
+.ui.large.form {
+    margin-top: 30%;
+}
+.ui.teal.header {
+    color: #4183c4!important;
+}
+.ui.teal.button, .ui.teal.buttons .button {
+    background-color: #f4f4ee;
+    color: #4183c4;
+}
+.ui.teal.button:hover, .ui.teal.buttons .button:hover {
+    background-color: #4183c4;
+    color: #fff;
+    text-shadow: none;
 }
 .react-confirm-alert-body {
   margin-left: 25px;
